--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,109 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #ededed;
+  --foreground: #0a0a0a;
+  --hover: #333333;
+  --disabled: #b0b0b0;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --hover: #cccccc;
+    --disabled: #333333;
   }
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-geist-mono), Arial, Helvetica, sans-serif;
+}
+
+.project-card {
+  background-color: var(--background);
+  border: 1px solid var(--foreground);
+  padding: 20px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.project-details-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 40px;
+}
+
+.project-details-section {
+  margin: 10px 0 10px 0;
+}
+
+.button-group {
+  margin-top: 15px;
+}
+
+.button {
+  display: inline-block;
+  background-color: var(--foreground);
+  color: var(--background);
+  padding: 8px 12px;
+  margin-right: 10px;
+}
+.button.disabled {
+  background-color: var(--disabled);
+  pointer-events: none;
+}
+.button.disabled:hover {
+  background-color: var(--disabled);
+}
+.button:hover{
+  background-color: var(--hover);
+}
+
+.contact-details {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  text-align: center;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 600px;
+}
+
+.contact-form input, .contact-form textarea {
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 20px;
+  background-color: #333333;
+  color: #F5F5F5;
+  border: none;
+}
+.contact-form button {
+  padding: 10px 20px;
+  background-color: #F5F5F5;
+  color: #171717;
+  border: none;
+  cursor: pointer;
+}
+.social-media {
+  margin-top: 8px;
+}
+.social-media a {
+  margin-bottom: 4px;
+}
+
+ul {
+  display: block;
+  list-style-type: disc;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  -webkit-padding-start: 40px;
 }
